--- a/css/base.css
+++ b/css/base.css
@@ -17,6 +17,8 @@ body {
     line-height: 1.6;
     background-image: var(--background-img);
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     background-attachment: fixed;
 }
 
